Implemented gamelogic (flagSubmit, hintsUsed) and progress total stars for each Diff